log
Thu Apr 30 08:13:02 PM UTC 2026: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
8389d45
Thu Apr 30 08:46:29 PM UTC 2026: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:121:16: error: ‘auxAvance’ undeclared (first use in this function)
  121 |         while (auxAvance -> left != NULL){
      |                ^~~~~~~~~
treemap.c:121:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:135:9: error: ‘p’ undeclared (first use in this function)
  135 |     if (p != NULL) return p -> pair;
      |         ^
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
c196059
Thu Apr 30 08:47:09 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
134f920
Thu Apr 30 08:47:48 PM UTC 2026: 
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
96f1047
Thu Apr 30 08:48:26 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
1254a4d
Thu Apr 30 08:49:21 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
341d29d
Thu Apr 30 08:56:10 PM UTC 2026: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:129:15: error: unused variable ‘p’ [-Werror=unused-variable]
  129 |     TreeNode* p = aux -> parent;
      |               ^
cc1: all warnings being treated as errors
99f95ce
Thu Apr 30 08:56:35 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|6
total_score: 15/60
ed89ace
Thu Apr 30 08:59:32 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
bda452f
Sun May  3 01:34:49 AM UTC 2026: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|5
total_score: 20/60
0b91b6b
Sun May  3 01:39:43 AM UTC 2026: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  18|4
total_score: 30/60
f891d12
Sun May  3 01:48:58 AM UTC 2026: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  20|3
total_score: 40/60
c4432f9
Sun May  3 01:51:14 AM UTC 2026: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 40/60
270574d
Sun May  3 09:52:20 PM UTC 2026: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:130:29: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  130 |     if(tree == NULL) return NULL;
      |                             ^~~~
treemap.c:129:6: note: declared here
  129 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
b91b6c4
Sun May  3 09:52:48 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 43/60
ca0d223
Sun May  3 10:00:41 PM UTC 2026: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  0|0
e93473c
Sun May  3 10:02:44 PM UTC 2026: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
9e3c167
Sun May  3 10:10:26 PM UTC 2026: 
 treemap.c | 26 ++++++++++++++------------
 1 file changed, 14 insertions(+), 12 deletions(-)
 tests:  24|2
total_score: 46/60
73f5227
Sun May  3 10:17:35 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:174:30: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  174 |         TreeNode* masPeque = minimun(der);
      |                              ^~~~~~~
      |                              minimum
treemap.c:174:30: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
treemap.c:177:20: error: passing argument 1 of ‘removeNode’ from incompatible pointer type [-Wincompatible-pointer-types]
  177 |         removeNode(masPeque);
      |                    ^~~~~~~~
      |                    |
      |                    TreeNode *
treemap.c:129:27: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
  129 | void removeNode(TreeMap * tree, TreeNode* node) {
      |                 ~~~~~~~~~~^~~~
treemap.c:177:9: error: too few arguments to function ‘removeNode’
  177 |         removeNode(masPeque);
      |         ^~~~~~~~~~
treemap.c:129:6: note: declared here
  129 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
4d40d2b
Sun May  3 10:18:13 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 46/60
d97642e
Sun May  3 10:22:32 PM UTC 2026: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  24|2
total_score: 46/60
68048b4
Sun May  3 10:26:13 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  24|2
total_score: 46/60
d101088
Sun May  3 10:28:29 PM UTC 2026: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  24|2
total_score: 46/60
24c7337
Sun May  3 10:29:49 PM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  24|2
total_score: 46/60
8bc82f7
Sun May  3 10:33:24 PM UTC 2026: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  24|2
total_score: 46/60
fdf3493
Sun May  3 10:35:37 PM UTC 2026: 
 treemap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c:170:5: error: expected identifier or ‘(’ before ‘else’
  170 |     else{
      |     ^~~~
treemap.c:177:5: error: expected identifier or ‘(’ before ‘return’
  177 |     return;
      |     ^~~~~~
treemap.c:178:1: error: expected identifier or ‘(’ before ‘}’ token
  178 | }
      | ^
9e2069f
Sun May  3 10:36:38 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  25|1
total_score: 50/60
d32d7f6
